<resources>
    <string name="app_name">NotesApp</string>
    <string name="crear_notas">Crear Notas</string>
    <string name="ver_notas">Ver Notas</string>
    <string name="descripci_n">DESCRIPCIÓN</string>
    <string name="volver">Volver</string>
    <string name="guardar">Guardar</string>
    <string name="escribir_descripcion_aqu">Escribir descripción aquí...</string>
    <string name="tomar_fotos">Tomar Fotos</string>
    <string name="galeria">Galeria</string>
    <string name="cancelar">Cancelar</string>
    <string name="su_imagen_aqu">Su imagen aquí</string>
    <string name="debe_ingresar_una_descripcion_y_una_imagen">Debe ingresar una descripción y una imagen</string>
    <string name="nota_guardada">Se ha guardado la nota</string>
    <string name="camara_no_disponible">La cámara no está disponible ya que se denegaron los permisos necesarios...</string>
    <string name="funcion_no_disponible">Función no disponible en esta versión de Android...</string>
    <string name="error">Error!</string>
    <string name="foto_no_guardada">No se ha podido guardar la foto</string>
</resources>